<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_downupload_file"
        android:icon="@android:drawable/stat_sys_download_done"
        android:title="@string/action_download_file"
        android:orderInCategory="1"
        android:tint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete_file"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete_file"
        android:orderInCategory="2"
        android:tint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_rename_file"
        android:title="@string/action_rename_file"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_cut_file"
        android:title="@string/action_cut_file"
        android:icon="@drawable/ic_cut"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_copy_file"
        android:title="@string/action_copy_file"
        android:icon="@drawable/ic_copy"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/action_paste_file"
        android:title="@string/action_paste_file"
        android:icon="@drawable/ic_paste"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:visible="false"/>

</menu>