<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    tools:context=".EditConnectionFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connection_name_edit" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hostInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editHostEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connection_host_edit" />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/connection_anonymous_edit"
        android:id="@+id/editAnonymousSwitch"
        android:checked="false"
        android:paddingTop="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editUserEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connection_user_edit" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editPassEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connection_pass_edit"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/portInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/editPortEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connection_port_edit"
            android:text="@string/connection_port_edit_default"
            android:inputType="number"
            android:ems="5"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/connection_protocol_edit"
            android:id="@+id/editProtocolTextView"
            android:layout_weight="2"/>

        <Spinner
            android:layout_width="129dp"
            android:layout_height="match_parent"
            android:id="@+id/editProtocolSpinner"
            android:spinnerMode="dropdown"
            android:entries="@array/connection_protocol_spinner"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>